@@ -7,6 +7,7 @@ import org.apache.flink.configuration.*;
 import org.apache.flink.runtime.jobgraph.SavepointRestoreSettings;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
@@ -19,7 +20,8 @@ import java.util.List;
  */
 class CliEndpointTest {
 
-    private String mysqlPath = "/Users/wangqi/Documents/software/repository/mysql/mysql-connector-java/8.0.28/mysql-connector-java-8.0.28.jar";
+//    private String mysqlPath = "/Users/wangqi/Documents/software/repository/mysql/mysql-connector-java/8.0.28/mysql-connector-java-8.0.28.jar";
+    private String mysqlPath = "/Library/Maven/repository/mysql/mysql-connector-java/8.0.28/mysql-connector-java-8.0.28.jar";
 
     private String seatunnelHome = "/Users/wangqi/Downloads/apache-seatunnel-incubating-2.0.5-SNAPSHOT";
     private String seatunnelPath = seatunnelHome + "/lib/seatunnel-core-flink.jar";
@@ -36,9 +38,16 @@ class CliEndpointTest {
      */
     private Configuration buildConfiguration() throws MalformedURLException {
         Configuration configuration = new Configuration();
-        configuration.setString(JobManagerOptions.ADDRESS, "localhost");
-        configuration.setInteger(JobManagerOptions.PORT, 6123);
-        List<URL> jars = Arrays.asList(new URL("file://" + seatunnelPath), new URL("file://" + mysqlPath));
+        configuration.setString(JobManagerOptions.ADDRESS, "172.16.202.119");
+        configuration.setInteger(JobManagerOptions.PORT, 32431);
+        configuration.setInteger(RestOptions.PORT, 32642);
+
+//        configuration.setString(JobManagerOptions.ADDRESS, "localhost");
+//        configuration.setInteger(JobManagerOptions.PORT, 6123);
+//        configuration.setInteger(RestOptions.PORT, 8081);
+        URL seatunnelURL = new File(seatunnelPath).toURL();
+        URL mysqlURL = new File(mysqlPath).toURL();
+        List<URL> jars = Arrays.asList(seatunnelURL, mysqlURL);
         ConfigUtils.encodeCollectionToConfig(configuration, PipelineOptions.JARS, jars, Object::toString);
         configuration.setString(DeploymentOptions.TARGET, RemoteExecutor.NAME);
         return configuration;
